--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  background: orange;
 }
 
 .App-logo {
